--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -1,20 +1,20 @@
+@import "../App.scss";
+
 .nav {
-  background-color: #fff;
+  background-color: $color-white;
 
   &_content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex;
     padding: 20px 0;
     font-size: 2rem;
     font-weight: 400;
 
     @media only screen and (max-width: 30em) {
-      padding: 10px;
+      padding: 10px 0;
     }
   }
 
   &_text-right {
-    color: red;
+    color: $color-red;
   }
 }
