--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -1,6 +1,9 @@
+@import "..//App.scss";
+
 .filter {
   padding: 20px 0;
   font-weight: normal;
+
   &_text-1 {
     font-weight: bold;
     font-size: 3rem;
@@ -9,21 +12,20 @@
 
   &_text-2 {
     font-size: 2rem;
-    color: blue;
+    color: $color-blue;
     margin-bottom: 1rem;
   }
 
   &_container {
     max-width: 400px;
-    display: flex;
-    justify-content: space-between;
+    @include flex;
 
     &-item {
       font-size: 1.25rem;
       font-weight: bold;
       border-radius: 10rem;
       padding: 10px;
-      border: 2px solid #aaa;
+      border: 2px solid $color-gray;
       cursor: pointer;
     }
 
@@ -31,7 +33,8 @@
       cursor: pointer;
       border-radius: 10rem;
       padding: 15px;
-      @media only screen and (max-width: 30em) {
+
+      @media only screen and (max-width: $bp-smallest) {
         padding: 11px;
       }
     }
@@ -42,29 +45,19 @@
   padding: 20px 0;
 
   &_container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex;
+    justify-content: flex-start;
     flex-wrap: wrap;
-
-    // @media only screen and (max-width: 30em) {
-    //   flex-direction: column;
-    //   align-items: flex-start;
-    // }
   }
 
   &_bg {
-    background-color: #fff;
+    background-color: $color-white;
     padding: 30px 50px;
-    margin-bottom: 20px;
-    // height: 15rem;
-    // vertical-align: middle;
-    @media only screen and (max-width: 50em) {
+    margin: 0 10px 20px 0;
+
+    @media only screen and (max-width: $bp-medium) {
       padding: 15px 30px;
     }
-    // @media only screen and (max-width: 30em) {
-    //   padding: 5px 10px;
-    // }
   }
 }
 
@@ -72,63 +65,45 @@
   width: 25%;
   margin-top: 35px;
 
-  @media only screen and (max-width: 50em) {
+  @media only screen and (max-width: $bp_medium) {
     width: 55%;
   }
-  @media only screen and (max-width: 30em) {
+
+  @media only screen and (max-width: $bp-smallest) {
     width: auto;
   }
-}
-
-.red {
-  background-color: red;
-}
-
-.blue {
-  background-color: blue;
-}
-.green {
-  background-color: green;
-}
-.yellow {
-  background-color: yellow;
-}
-.cyan {
-  background-color: cyan;
-}
-.gray {
-  background-color: gray;
 }
 
 .rounded {
   width: 80px;
   height: 80px;
-  // background: red;
   display: inline-block;
   border-radius: 50%;
-  @media only screen and (max-width: 50em) {
+
+  @media only screen and (max-width: $bp-medium) {
     width: 60px;
     height: 60px;
   }
 }
+
 .oval {
   width: 60px;
   height: 80px;
-  // background: red;
   display: inline-block;
-  //   border-radius: 50px / 50px;
   border-radius: 50%;
-  @media only screen and (max-width: 50em) {
+
+  @media only screen and (max-width: $bp-medium) {
     width: 40px;
     height: 60px;
   }
 }
+
 .square {
   width: 80px;
   height: 80px;
   display: inline-block;
-  // background: red;
-  @media only screen and (max-width: 50em) {
+
+  @media only screen and (max-width: $bp-medium) {
     width: 60px;
     height: 60px;
   }
@@ -137,11 +112,11 @@
   width: 150px;
   height: 80px;
   display: inline-block;
-  @media only screen and (max-width: 50em) {
+
+  @media only screen and (max-width: $bp-medium) {
     width: 130px;
     height: 60px;
   }
-  // background: red;
 }
 
 .triangle {
@@ -149,11 +124,10 @@
   height: 0;
   border-left: 55px solid transparent;
   border-right: 55px solid transparent;
-  border-bottom: 81px solid red;
   display: inline-block;
-  @media only screen and (max-width: 50em) {
+
+  @media only screen and (max-width: $bp-medium) {
     border-left: 35px solid transparent;
     border-right: 35px solid transparent;
-    border-bottom: 60px solid red;
   }
 }
