add active class to  current filters

--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@ $color-yellow: yellow;
 $color-cyan: cyan;
 $color-gray: #aaa;
 $color-white: #fff;
+$color-cyan-light: #b6cbfb;
 
 // RESPONSVIE BREAKPOINT
 $bp-largest: 75em; //1200px
