--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -23,6 +23,7 @@
     &-item {
       font-size: 1.25rem;
       font-weight: bold;
+      text-transform: capitalize;
       border-radius: 10rem;
       padding: 10px;
       border: 2px solid $color-gray;
@@ -37,6 +38,26 @@
       @media only screen and (max-width: $bp-smallest) {
         padding: 11px;
       }
+    }
+  }
+
+  &_shape {
+    &-active {
+      border: 5px solid $color-cyan-light;
+    }
+
+    &-inactive {
+      border: 2px solid $color-gray;
+    }
+  }
+
+  &_color {
+    &-active {
+      border: 5px solid $color-cyan-light;
+    }
+
+    &-inactive {
+      border: 2px solid transparent;
     }
   }
 }
