--- a/src/pages/homepage.scss
+++ b/src/pages/homepage.scss
@@ -6,12 +6,13 @@
 
   &_text-1 {
     font-weight: bold;
-    font-size: 3rem;
+    text-transform: capitalize;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
   }
 
   &_text-2 {
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: $color-blue;
     margin-bottom: 1rem;
   }
